--- a/content/About.html
+++ b/content/About.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>cmsimde_site</title>
+        <title>wcm-2022 41023110</title>
         <meta charset="utf-8">
 <meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -108,14 +108,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container-fluid">
                 <div class="row align-items-center">
-                <h1>cmsimde_site</h1>
+                <h1>wcm-2022 41023110 一下作業網站</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">cmsimde_site</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">wcm-2022 41023110 一下作業網站</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a></li>
+                     <li><a href='About.html'>About</a><li><a href='H1 midterm.html'>H1 midterm</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,8 +139,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <br /><h1>About</h1>
-<p>wcm-2022</p><br /> </div>
+    <div id="tipue_search_content"> <a href='H1 midterm.html'>Next</a> >> H1 midterm<br /><h1>About</h1>
+<p>wcm-2022</p>
+<br /> <a href='H1 midterm.html'>Next</a> >> H1 midterm</div>
         
     <!-- footer -->
       <div class="container">
