--- a/content/index.html
+++ b/content/index.html
@@ -139,6 +139,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='Tetris.html'>Next</a> >> Tetris<br /><h1>About</h1>
+<p><span>wcm2022課程網站連結</span></p>
+<p><span>網站</span>:<a href="/get_page/About/1">https://127.0.0.1:2022/get_page/About/1</a></p>
+<p><span>倉儲</span>:<a href="https://github.com/41023110/wcm2022">https://github.com/41023110/wcm2022</a></p>
+<p><span></span></p>
 <pre></pre>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
 <h4>利用 cmsimde 建立靜態網誌方法:</h4>
@@ -150,8 +154,7 @@ img.add_border {
 <p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
 <p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
 <p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
-<p>wcm-2022</p>
-<br /> <a href='Tetris.html'>Next</a> >> Tetris</div>
+<p>wcm-2022</p><br /> <a href='Tetris.html'>Next</a> >> Tetris</div>
         
     <!-- footer -->
       <div class="container">
