--- a/config/content.htm
+++ b/config/content.htm
@@ -1,6 +1,6 @@
 <h1>About</h1>
 <p><span>wcm2022課程網站連結</span></p>
-<p><span>網站</span>:<a href="https://kehueisin.github.io/wcm2022/">https://kehueisin.github.io/wcm2022/</a></p>
+<p><span>網站</span>:<a href="/get_page/About/1">https://127.0.0.1:2022/get_page/About/1</a></p>
 <p><span>倉儲</span>:<a href="https://github.com/41023110/wcm2022">https://github.com/41023110/wcm2022</a></p>
 <p><span></span></p>
 <pre></pre>
