--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,4 +1,8 @@
 <h1>About</h1>
+<p><span>wcm2022課程網站連結</span></p>
+<p><span>網站</span>:<a href="https://localhost:8443/content/index.html">https://localhost:8443/content/index.html</a></p>
+<p><span>倉儲</span>:<a href="https://github.com/41023110/wcm2022">https://github.com/41023110/wcm2022</a></p>
+<p><span></span></p>
 <pre></pre>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
 <h4>利用 cmsimde 建立靜態網誌方法:</h4>
