--- a/content/index.html
+++ b/content/index.html
@@ -140,7 +140,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='Tetris.html'>Next</a> >> Tetris<br /><h1>About</h1>
 <p><span>wcm2022課程網站連結</span></p>
-<p><span>網站</span>:<a href="/get_page/About/1">https://127.0.0.1:2022/get_page/About/1</a></p>
+<p><span>網站</span>:<a href="https://localhost:8443/content/index.html">https://localhost:8443/content/index.html</a></p>
 <p><span>倉儲</span>:<a href="https://github.com/41023110/wcm2022">https://github.com/41023110/wcm2022</a></p>
 <p><span></span></p>
 <pre></pre>
@@ -154,7 +154,8 @@ img.add_border {
 <p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
 <p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
 <p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
-<p>wcm-2022</p><br /> <a href='Tetris.html'>Next</a> >> Tetris</div>
+<p>wcm-2022</p>
+<br /> <a href='Tetris.html'>Next</a> >> Tetris</div>
         
     <!-- footer -->
       <div class="container">
