--- a/content/w14.html
+++ b/content/w14.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Tetris.html'>Tetris</a><li><a href='H1 midterm.html'>H1 midterm</a><li><a href='w14.html'>w14</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Tetris.html'>Tetris</a><li><a href='H1 midterm.html'>H1 midterm</a><li><a href='W14.html'>W14</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">H1 midterm << <a href='H1 midterm.html'>Previous</a> <br /><h1>w14</h1>
+    <div id="tipue_search_content">H1 midterm << <a href='H1 midterm.html'>Previous</a> <br /><h1>W14</h1>
 <p>更改舊資料</p>
 <p>
 <script src="./../cmsimde/static/brython.js"></script>
