--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,6 @@
 <h1>About</h1>
 <p><span>wcm2022課程網站連結</span></p>
-<p><span>網站</span>:<a href="/get_page/About/1">https://127.0.0.1:2022/get_page/About/1</a></p>
+<p><span>網站</span>:<a href="https://localhost:8443/content/index.html">https://localhost:8443/content/index.html</a></p>
 <p><span>倉儲</span>:<a href="https://github.com/41023110/wcm2022">https://github.com/41023110/wcm2022</a></p>
 <p><span></span></p>
 <pre></pre>
@@ -14,7 +14,8 @@
 <p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
 <p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
 <p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
-<p>wcm-2022</p><h1>Tetris</h1>
+<p>wcm-2022</p>
+<h1>Tetris</h1>
 <p></p>
 <!-- 導入 brython 程式庫 -->
 <script src="/static/brython.js"></script>
