--- a/content/W17.html
+++ b/content/W17.html
@@ -140,9 +140,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W14 << <a href='W14.html'>Previous</a> <br /><h1>W17</h1>
-<p></p>
-</div>
 <div></div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://youtu.be/HGTRZTzBbZI" title="YouTube video player" width="560"></iframe></p>
 <div></div>
 <div></div>
 <!-- graphics-column is for ggame -->
