--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -272,6 +272,8 @@ run()
 </script>
 </p><h1>W17</h1>
 <div></div>
+<p>網址:https://youtu.be/HGTRZTzBbZI</p>
+<div>心得:不是很熟悉俄羅斯方塊這個遊戲，對超空不是很熟練。速度調比較慢，但還是有過6分標準。</div>
 <div></div>
 <div></div>
 <!-- graphics-column is for ggame -->
