--- a/content/W17.html
+++ b/content/W17.html
@@ -141,10 +141,12 @@ img.add_border {
         </header>
     <div id="tipue_search_content">W14 << <a href='W14.html'>Previous</a> <br /><h1>W17</h1>
 <div></div>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://youtu.be/HGTRZTzBbZI" title="YouTube video player" width="560"></iframe></p>
+<p>H1</p>
+<p>網址:<a class="style-scope ytcp-video-info" href="https://youtu.be/HGTRZTzBbZI" target="_blank">https://youtu.be/QtdPbtvFLhY</a></p>
+<p><span style="background-color: #ffff00;"> 心得:不是很熟悉俄羅斯方塊這個遊戲，對超空不是很熟練。速度調比較慢，但還是有過6分標準。</span></p>
 <div></div>
 <div></div>
-<!-- graphics-column is for ggame -->
+<p><span style="background-color: #ffff00;"><!-- graphics-column is for ggame --></span></p>
 <p><!-- #####  editor1 結束 ##### --></p>
 <p><!-- 以下可以開始利用 editor1 的設定編寫對應 Brython 程式 -->
 <script type="text/python3">
