--- a/content/w14.html
+++ b/content/w14.html
@@ -250,7 +250,8 @@ doc['clear_bd'].bind('click', clear_bd)
 # 呼叫函式執行
 run()
 </script>
-</p><br />H1 midterm << <a href='H1 midterm.html'>Previous</a> <a href='W17.html'>Next</a> >> W17</div>
+</p>
+<br />H1 midterm << <a href='H1 midterm.html'>Previous</a> <a href='W17.html'>Next</a> >> W17</div>
         
     <!-- footer -->
       <div class="container">
