--- a/config/content.htm
+++ b/config/content.htm
@@ -270,11 +270,12 @@ doc['clear_bd'].bind('click', clear_bd)
 # 呼叫函式執行
 run()
 </script>
-</p><h1>W17</h1>
+</p>
+<h1>W17</h1>
 <div></div>
 <p>H1</p>
 <p>網址:<a class="style-scope ytcp-video-info" href="https://youtu.be/HGTRZTzBbZI" target="_blank">https://youtu.be/QtdPbtvFLhY</a></p>
-<p><span style="background-color: #ffff00;"> 心得:不是很熟悉俄羅斯方塊這個遊戲，對超空不是很熟練。速度調比較慢，但還是有過6分標準。</span></p>
+<p><span style="background-color: #ffff00;"> 心得:不是很熟悉俄羅斯方塊這個遊戲，對操控不是很熟練。速度調比較慢，但還是有過6分標準。</span></p>
 <div></div>
 <div></div>
 <p><span style="background-color: #ffff00;"><!-- graphics-column is for ggame --></span></p>
