--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -126,7 +126,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Tetris.html'>Tetris</a><li><a href='H1 midterm.html'>H1 midterm</a><li><a href='W14.html'>W14</a><li><a href='W17.html'>W17</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Tetris.html'>Tetris</a><li><a href='H1 midterm.html'>H1 midterm</a><li><a href='W14.html'>W14</a><li><a href='W17.html'>W17</a><li><a href='期末任務1.html'>期末任務1</a><li><a href='期末任務2.html'>期末任務2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -137,4 +137,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='Tetris.html'>Tetris</a><li><a href='H1 midterm.html'>H1 midterm</a><li><a href='W14.html'>W14</a><li><a href='W17.html'>W17</a></li></ul></section></div></body></html>
+    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='Tetris.html'>Tetris</a><li><a href='H1 midterm.html'>H1 midterm</a><li><a href='W14.html'>W14</a><li><a href='W17.html'>W17</a><li><a href='期末任務1.html'>期末任務1</a><li><a href='期末任務2.html'>期末任務2</a></li></ul></section></div></body></html>
